[package]
name = "ruplica"                                    # the name of the package
version = "0.1.0"                                   # the current version, obeying semver
authors = ["Mateusz Matejuk <esavier@erglabs.org>"] # the authors of the package
edition = "2021"                                    # the edition of Rust to use

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
clap = { version = "4.5", features = [
  "env",
  "derive",
  "unicode",
  "color",
  "error-context",
  "string",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.0"
blake2b_simd = "1.0"
sha3 = "0.10"
crc32fast = "1.2"
tempfile = "3.14"
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-attributes = { version = "0.1" }
tracing-core = { version = "0.1" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "fmt",
  "std",
  "registry",
] }
serde_nanos = { version = "0.1.4" }
# minstant = "0.1.0"
hifitime = { version = "4.0", features = ["serde"] }
unwrap_todo = "0.1.2"
unwrap = "1.2.1"
once_cell = "1.20"
uuid = { version = "1.3", features = ["v7", "v4", "serde"] }

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-gix = { version = "1.0.2" }
vergen-pretty = { version = "0.3.5" }
